--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
       <nav>
-        <a href="">Web Studio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="" class="logo link">Web Studio</a>
+        <ul class="logo-list list">
+          <li class="logo-link"><a href="" class="logo-item link">Studio</a></li>
+          <li class="logo-link"><a href="" class="logo-item link ">Portfolio</a></li>
+          <li class="logo-link"><a href="" class="logo-item link ">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
+      <ul class="header-link list">
+        <li><a  class="header-mail link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
+        <li><a  class="header-tel link" href="tel:+380961111111" >+380961111111</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-        <button type="button">Request our service</button>
+      <section class="hero">
+        <h1 class="hero-title"> EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+        <button type="button" class="hero-button">Request our service</button>
       </section>
       <section>
         <!-- <h2>What we proud of</h2> -->
-       <!-- <p>Я сделала невидимый комментарий потому что у меня сразу после h1 идет h3 и я помню что это не правильно, но где мне нужно поставить h2 тут чтобы была правильная иерархия я не знаю.Может вы подскажите?</p>  -->
           <li>
             <h3>ATTENTION TO DETAILS</h3>
             <p>
