--- a/index.html
+++ b/index.html
@@ -30,50 +30,50 @@
         <h1 class="hero-title"> EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
         <button type="button" class="hero-button">Request our service</button>
       </section>
-      <section>
-        <!-- <h2>What we proud of</h2> -->
-          <li>
-            <h3>ATTENTION TO DETAILS</h3>
-            <p>
+      <section class="hero-section list">
+        <h2 hidden >What we proud of</h2>
+          <li class="hero-list">
+            <h3 class="hero-item ">ATTENTION TO DETAILS</h3>
+            <p class="hero-text">
               We go into all the details and processes of your business to
               develop a customized solution.
             </p>
           </li>
-          <li>
-            <h3>PUNCTUALITY</h3>
-            <p>
+          <li class="hero-list">
+            <h3 class="hero-item link">PUNCTUALITY</h3>
+            <p class="hero-text">
               With us, you can feel safe and secure. An important principle of
               the company: respect your time and respect the agreed deadlines.
             </p>
           </li>
-          <li>
-            <h3>PLANNING</h3>
-            <p>
+          <li class="hero-list">
+            <h3 class="hero-item link">PLANNING</h3>
+            <p class="hero-text">
               You will be able to observe and participate in every phase of
               solution development and implementation.
             </p>
           </li>
-          <li>
-            <h3>MODERN TECHNOLOGIES</h3>
-            <p>
+          <li class="hero-list">
+            <h3 class="hero-item link">MODERN TECHNOLOGIES</h3>
+            <p class="hero-text">
               We use innovative tools to solve assigned tasks. It's time to
               simplify work processes.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>WHAT WE DO</h2>
-        <ul>
-          <li> <img src="./images/computer.jpg" alt="person working on computer" width="390" height="294"></li>
+      <section class="images">
+        <h2 class="images-title">What we do</h2>
+        <ul class="images-list list">
+          <li><img src="./images/computer.jpg" alt="person working on computer" width="390" height="294"></li>
           <li><img src="./images/ipad.jpg" alt="person working on ipad" width="390" height="294"></li>
           <li><img src="./images/phone.jpg" alt="person sync phone with computer" width="390" height="294"></li>
         </ul>
       </section>
-      <section>
-        <h2>OUR TEAM</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img
               src="./images/man1.jpg"
               alt="photo of man"
@@ -81,9 +81,9 @@
               height="260"
             />
             <h3 lang="ru">Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <p  class="team-process" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/woman.jpg"
               alt="photo of woman"
@@ -91,9 +91,9 @@
               height="260"
             />
             <h3 lang="ru">Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <p class="team-process" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/man2.jpg"
               alt="photo of man"
@@ -101,9 +101,9 @@
               height="260"
             />
             <h3 lang="ru">Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <p class="team-process" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/man3.jpg"
               alt="photo of man"
@@ -111,20 +111,20 @@
               height="260"
             />
             <h3 lang="ru">Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <p class="team-process" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="">Web Studio</a>
-      <address>
+    <footer class="footer">
+      <a href="" class="logo link">Web Studio</a>
+      <address class="footer-address">
         695 Park Ave, New York, NY 10065 <br />
         United States
       </address>
       <address>
-        <a href="mailto:info@example.com">info@example.com</a><br />
-        <a href="tel:+12127724150">+12127724150</a>
+        <a class="footer-mail" href="mailto:info@example.com">info@example.com</a><br />
+        <a class="footer-tel" href="tel:+12127724150">+12127724150</a>
       </address>
     </footer>
   </body>
