--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Web Studio</title>
@@ -30,31 +30,32 @@
         <h1 class="hero-title"> EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
         <button type="button" class="hero-button">Request our service</button>
       </section>
-      <section class="hero-section list">
+      <section class="hero-section">
         <h2 hidden >What we proud of</h2>
-          <li class="hero-list">
+        <ul class="hero-list list">
+          <li class="hero-link">
             <h3 class="hero-item ">ATTENTION TO DETAILS</h3>
             <p class="hero-text">
               We go into all the details and processes of your business to
               develop a customized solution.
             </p>
           </li>
-          <li class="hero-list">
-            <h3 class="hero-item link">PUNCTUALITY</h3>
+          <li class="hero-link">
+            <h3 class="hero-item">PUNCTUALITY</h3>
             <p class="hero-text">
               With us, you can feel safe and secure. An important principle of
               the company: respect your time and respect the agreed deadlines.
             </p>
           </li>
-          <li class="hero-list">
-            <h3 class="hero-item link">PLANNING</h3>
+          <li class="hero-link">
+            <h3 class="hero-item">PLANNING</h3>
             <p class="hero-text">
               You will be able to observe and participate in every phase of
               solution development and implementation.
             </p>
           </li>
-          <li class="hero-list">
-            <h3 class="hero-item link">MODERN TECHNOLOGIES</h3>
+          <li class="hero-link">
+            <h3 class="hero-item">MODERN TECHNOLOGIES</h3>
             <p class="hero-text">
               We use innovative tools to solve assigned tasks. It's time to
               simplify work processes.
