--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Portfolio</title>
@@ -21,8 +21,8 @@
         </ul>
       </nav>
       <ul class="header-link list">
-        <li><a  class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a  class="header-tel link"  href="tel:+12127724150" >+1 212-772-4150</a></li>
+        <li><a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="header-tel link"  href="tel:+12127724150" >+1 212-772-4150</a></li>
       </ul>
     </header>
     <main>
@@ -38,60 +38,49 @@
         </section>
         <section class="main">
 <ul class="main-list list">
-    <li><a class="image-link link" href=""><img src="./images2/people.jpg" alt="group of people" width="370" height="294"/>
+    <li><a class="image-link link" href=""><img src="./images2/people.jpg" alt="group of people" width="370" height="294"/></a>
             <h2 class="main-h">Technoduck</h2>
                 <p class="main-p">Web-site</p>
-              </a>
     </li>
-    <li><a  class="image-link link" href=""><img src="./images2/basketball.jpg" alt="basketball players" width="370" height="294"/>
+    <li><a class="image-link link" href=""><img src="./images2/basketball.jpg" alt="basketball players" width="370" height="294"/></a>
             <h2 class="main-h" >Poster New Orlean vs Golden Star</h2>
                 <p class="main-p">Design</p>
-              </a>
     </li>
-    <li><a  class="image-link link" href=""><img src="./images2/seafood.jpg" alt="menu restaurant" width="370" height="294"/>
-            <h2 class="main-h" >Seafood Restaurant</h2>
+    <li><a  class="image-link link" href=""><img src="./images2/seafood.jpg" alt="menu restaurant" width="370" height="294"/></a>
+            <h2 class="main-h">Seafood Restaurant</h2>
                 <p class="main-p">Apps</p>
-              </a>
     </li>
-    <li><a  class="image-link link" href=""><img src="./images2/headphones.jpg" alt="headphones" width="370" height="294"/>
-            <h2 class="main-h" >Project Prime</h2>
+    <li><a  class="image-link link" href=""><img src="./images2/headphones.jpg" alt="headphones" width="370" height="294"/></a>
+            <h2 class="main-h">Project Prime</h2>
                 <p class="main-p">Marketing</p>
-              </a>
     </li>
-    <li><a class="image-link link" href=""><img src="./images2/boxes.jpg" alt="boxes" width="370" height="294"/>
-            <h2 class="main-h" >Project Boxes </h2>
+    <li><a class="image-link link" href=""><img src="./images2/boxes.jpg" alt="boxes" width="370" height="294"/></a>
+            <h2 class="main-h">Project Boxes </h2>
                 <p class="main-p">Apps</p>
-              </a>
     </li>
-    <li><a class="image-link link" href=""><img src="./images2/macbook.jpg" alt="macbook" width="370" height="294"/>
+    <li><a class="image-link link" href=""><img src="./images2/macbook.jpg" alt="macbook" width="370" height="294"/></a>
             <h2 class="main-h" >Inspiration has no Borders</h2>
                 <p class="main-p">Web-site</p>  
-              </a>
     </li>
-    <li><a class="image-link link" href=""><img src="./images2/magazine.jpg" alt="magazine" width="370" height="294"/>
+    <li><a class="image-link link" href=""><img src="./images2/magazine.jpg" alt="magazine" width="370" height="294"/></a>
             <h2 class="main-h">Limited Edition</h2>
                 <p class="main-p">Design</p>
-              </a>
-    <li><a  class="image-link link" href=""><img src="./images2/label_tag.jpg" alt="label tag" width="370" height="294"/>
+    <li><a  class="image-link link" href=""><img src="./images2/label_tag.jpg" alt="label tag" width="370" height="294"/></a>
             <h2 class="main-h">Project LAB</h2>
                 <p class="main-p">Marketing</p>
-              </a>
     </li>
-    <li><a class="image-link link" href=""><img src="./images2/notebook.jpg" alt="notebook" width="370" height="294"/>
+    <li><a class="image-link link" href=""><img src="./images2/notebook.jpg" alt="notebook" width="370" height="294"/></a>
             <h2 class="main-h">Growing Business</h2>
                 <p class="main-p">Apps</p> 
     </li>
-  </a>
-</ul>
-        </section>
-    </main>
+  </ul>
+  </section>
+  </main>
     <footer class="footer">
       <a href="" class="logo link">Web Studio</a>
       <address class="footer-address">
         695 Park Ave, New York, NY 10065 <br />
         United States
-      </address>
-      <address>
         <a class="footer-mail" href="mailto:info@example.com">info@example.com</a><br />
         <a class="footer-tel" href="tel:+12127724150">+12127724150</a>
       </address>
