--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
   <body>
     <header>
       <nav>
-        <a href="" class="logo link">Web Studio</a>
+        <a href="" class="logo link">Web<span style="color:black"> Studio</span></a>
         <ul class="logo-list list">
-          <li class="logo-link"><a href="" class="logo-item">Studio</a></li>
+          <li class="logo-link"><a href="./index.html" class="logo-item">Studio</a></li>
           <li class="logo-link"><a href="" class="logo-item">Portfolio</a></li>
           <li class="logo-link"><a href="" class="logo-item">Contacts</a></li>
         </ul>
@@ -26,7 +26,7 @@
       </ul>
     </header>
     <main>
-      <h1 hidden >Portfolio Details</h1>
+      <h1 class="visually-hidden">Portfolio Details</h1>
         <section class="portfolio">
             <ul class="portfolio-item list">
             <li><button type ="button" class="portfolio-button">All</button></li>
@@ -38,38 +38,38 @@
         </section>
         <section class="main">
 <ul class="main-list list">
-    <li><a class="image-link link" href=""><img src="./images2/people.jpg" alt="group of people" width="370" height="294"/></a>
+    <li class="image-link link"><a href=""><img src="./images2/people.jpg" alt="group of people" width="370" height="294"/></a>
             <h2 class="main-h">Technoduck</h2>
                 <p class="main-p">Web-site</p>
     </li>
-    <li><a class="image-link link" href=""><img src="./images2/basketball.jpg" alt="basketball players" width="370" height="294"/></a>
+    <li class="image-link link"><a href=""><img src="./images2/basketball.jpg" alt="basketball players" width="370" height="294"/></a>
             <h2 class="main-h" >Poster New Orlean vs Golden Star</h2>
                 <p class="main-p">Design</p>
     </li>
-    <li><a  class="image-link link" href=""><img src="./images2/seafood.jpg" alt="menu restaurant" width="370" height="294"/></a>
+    <li class="image-link link"><a href=""><img src="./images2/seafood.jpg" alt="menu restaurant" width="370" height="294"/></a>
             <h2 class="main-h">Seafood Restaurant</h2>
                 <p class="main-p">Apps</p>
     </li>
-    <li><a  class="image-link link" href=""><img src="./images2/headphones.jpg" alt="headphones" width="370" height="294"/></a>
+    <li class="image-link link"><a href=""><img src="./images2/headphones.jpg" alt="headphones" width="370" height="294"/></a>
             <h2 class="main-h">Project Prime</h2>
                 <p class="main-p">Marketing</p>
     </li>
-    <li><a class="image-link link" href=""><img src="./images2/boxes.jpg" alt="boxes" width="370" height="294"/></a>
+    <li class="image-link link"><a href=""><img src="./images2/boxes.jpg" alt="boxes" width="370" height="294"/></a>
             <h2 class="main-h">Project Boxes </h2>
                 <p class="main-p">Apps</p>
     </li>
-    <li><a class="image-link link" href=""><img src="./images2/macbook.jpg" alt="macbook" width="370" height="294"/></a>
+    <li class="image-link link"><a href=""><img src="./images2/macbook.jpg" alt="macbook" width="370" height="294"/></a>
             <h2 class="main-h" >Inspiration has no Borders</h2>
                 <p class="main-p">Web-site</p>  
     </li>
-    <li><a class="image-link link" href=""><img src="./images2/magazine.jpg" alt="magazine" width="370" height="294"/></a>
+    <li class="image-link link"><a href=""><img src="./images2/magazine.jpg" alt="magazine" width="370" height="294"/></a>
             <h2 class="main-h">Limited Edition</h2>
                 <p class="main-p">Design</p>
-    <li><a  class="image-link link" href=""><img src="./images2/label_tag.jpg" alt="label tag" width="370" height="294"/></a>
+    <li class="image-link link"><a href=""><img src="./images2/label_tag.jpg" alt="label tag" width="370" height="294"/></a>
             <h2 class="main-h">Project LAB</h2>
                 <p class="main-p">Marketing</p>
     </li>
-    <li><a class="image-link link" href=""><img src="./images2/notebook.jpg" alt="notebook" width="370" height="294"/></a>
+    <li class="image-link link"><a  href=""><img src="./images2/notebook.jpg" alt="notebook" width="370" height="294"/></a>
             <h2 class="main-h">Growing Business</h2>
                 <p class="main-p">Apps</p> 
     </li>
@@ -77,7 +77,7 @@
   </section>
   </main>
     <footer class="footer">
-      <a href="" class="logo link">Web Studio</a>
+      <a href="" class="logo link">Web<span style="color:white"> Studio</span></a>
       <address class="footer-address">
         695 Park Ave, New York, NY 10065 <br />
         United States
