--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <body>
     <header>
       <nav>
-        <a href="" class="logo link">Web Studio</a>
+        <a href="" class="logo link">Web<span style="color:black"> Studio</span></a>
         <ul class="logo-list list">
           <li class="logo-link"><a href="" class="logo-item link">Studio</a></li>
-          <li class="logo-link"><a href="" class="logo-item link ">Portfolio</a></li>
+          <li class="logo-link"><a href="./portfolio.html" class="logo-item link ">Portfolio</a></li>
           <li class="logo-link"><a href="" class="logo-item link ">Contacts</a></li>
         </ul>
       </nav>
       <ul class="header-link list">
-        <li><a  class="header-mail link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
-        <li><a  class="header-tel link" href="tel:+380961111111" >+380961111111</a></li>
+        <li><a class="header-mail link"  href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
+        <li><a class="header-tel link"  href="tel:+380961111111" >+380961111111</a></li>
       </ul>
     </header>
     <main>
@@ -31,7 +31,7 @@
         <button type="button" class="hero-button">Request our service</button>
       </section>
       <section class="hero-section">
-        <h2 hidden >What we proud of</h2>
+        <h2 class="visually-hidden">What we proud of</h2>
         <ul class="hero-list list">
           <li class="hero-link">
             <h3 class="hero-item ">ATTENTION TO DETAILS</h3>
@@ -66,9 +66,9 @@
       <section class="images">
         <h2 class="images-title">What we do</h2>
         <ul class="images-list list">
-          <li><img src="./images/computer.jpg" alt="person working on computer" width="390" height="294"></li>
-          <li><img src="./images/ipad.jpg" alt="person working on ipad" width="390" height="294"></li>
-          <li><img src="./images/phone.jpg" alt="person sync phone with computer" width="390" height="294"></li>
+          <li class="image-link"><img src="./images/computer.jpg" alt="person working on computer" width="390" height="294"></li>
+          <li class="image-link"><img src="./images/ipad.jpg" alt="person working on ipad" width="390" height="294"></li>
+          <li class="image-link"><img src="./images/phone.jpg" alt="person sync phone with computer" width="390" height="294"></li>
         </ul>
       </section>
       <section class="team">
@@ -81,7 +81,7 @@
               width="270"
               height="260"
             />
-            <h3 lang="ru">Игорь Демьяненко</h3>
+            <h3 class="team-person" lang="ru">Игорь Демьяненко</h3>
             <p  class="team-process" lang="en">Product Designer</p>
           </li>
           <li class="team-item">
@@ -91,7 +91,7 @@
               width="270"
               height="260"
             />
-            <h3 lang="ru">Ольга Репина</h3>
+            <h3 class="team-person" lang="ru">Ольга Репина</h3>
             <p class="team-process" lang="en">Frontend Developer</p>
           </li>
           <li class="team-item">
@@ -101,7 +101,7 @@
               width="270"
               height="260"
             />
-            <h3 lang="ru">Николай Тарасов</h3>
+            <h3 class="team-person" lang="ru">Николай Тарасов</h3>
             <p class="team-process" lang="en">Marketing</p>
           </li>
           <li class="team-item">
@@ -111,19 +111,17 @@
               width="270"
               height="260"
             />
-            <h3 lang="ru">Михаил Ермаков</h3>
+            <h3 class="team-person" lang="ru">Михаил Ермаков</h3>
             <p class="team-process" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="" class="logo link">Web Studio</a>
+      <a href="" class="logo link">Web<span style="color:white"> Studio</span></a>
       <address class="footer-address">
         695 Park Ave, New York, NY 10065 <br />
         United States
-      </address>
-      <address>
         <a class="footer-mail" href="mailto:info@example.com">info@example.com</a><br />
         <a class="footer-tel" href="tel:+12127724150">+12127724150</a>
       </address>
