--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <nav>
         <a href="" class="logo link">Web<span style="color:black"> Studio</span></a>
         <ul class="logo-list list">
-          <li class="logo-link"><a href="" class="logo-item link">Studio</a></li>
-          <li class="logo-link"><a href="./portfolio.html" class="logo-item link ">Portfolio</a></li>
-          <li class="logo-link"><a href="" class="logo-item link ">Contacts</a></li>
+          <li class="logo-link"><a href="" class="logo-item current">Studio</a></li>
+          <li class="logo-link"><a href="./portfolio.html" class="logo-item ">Portfolio</a></li>
+          <li class="logo-link"><a href="" class="logo-item">Contacts</a></li>
         </ul>
       </nav>
       <ul class="header-link list">
