--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <a href="" class="logo link">Web<span style="color:black"> Studio</span></a>
         <ul class="logo-list list">
           <li class="logo-link"><a href="./index.html" class="logo-item">Studio</a></li>
-          <li class="logo-link"><a href="" class="logo-item">Portfolio</a></li>
+          <li class="logo-link"><a href="" class="logo-item current">Portfolio</a></li>
           <li class="logo-link"><a href="" class="logo-item">Contacts</a></li>
         </ul>
       </nav>
